FIX accessibility : Background and foreground colors do not have a sufficient contrast ratio

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -99,7 +99,8 @@ li {
 }
 
 li .active {
-    color: var(--secondary-color);
+    text-decoration: underline;
+    text-underline-position: under;
     pointer-events: var(--secondary-display);
 }
 
